<resources>
    <string name="app_name">Rememo</string>
    <string name="title_home">Rememo</string>
    <string name="basic_welcome">Welcome</string>
    <string name="title_collections">Collections</string>
    <string name="title_classes">Classes</string>
    <string name="title_students">Students</string>
    <string name="title_train">Train</string>
    <string name="title_learn_coll">Learn a collection</string>
    <string name="title_test_skills">Test your knowledge</string>
    <string name="title_"></string>
    <string name="login_email_addr">Email</string>
    <string name="login_send_email">Send Email</string>
    <string name="login_go_to_rememo">Go to Rememo</string>
    <string name="login_check_inbox">Check inbox</string>
    <string name="login_instructions">Login or signup with email</string>
    <string name="login_add_name_and_start">Add your name and start using Rememo</string>
    <string name="login_sent_to">Email sent to:</string>
    <string name="login_logged_as_STR">Logged in as %s</string>
    <string name="login_unknown_user">Unknown user</string>
    <string name="login_cant_empty_mail">Email can\'t be empty</string>
    <string name="login_cant_empty_name">Name can\'t be empty</string>
    <string name="login_too_long_name">Name can\'t be this long</string>
    <string name="login_error_saving_name_retry">Error saving name, please try again</string>
    <string name="login_error">Error logging in</string>
    <string name="login_failed_retry">Failed login, please try again</string>
    <string name="login_failed_use_same_device">Failed login, use the same device you send your email with</string>
    <string name="login_"></string>
    <string name="basic_name">Name</string>
    <string name="basic_or">Or</string>
    <string name="basic_start">Start</string>
    <string name="basic_share">Share</string>
    <string name="basic_create">Create</string>
    <string name="basic_add">Add</string>
    <string name="basic_edit">Edit</string>
    <string name="basic_rename">Rename</string>
    <string name="basic_cancel">Cancel</string>
    <string name="basic_delete">Delete</string>
    <string name="basic_leave">Leave</string>
    <string name="basic_loading">Loading ...</string>
    <string name="basic_no_collections">You don\'t have any collections</string>
    <string name="basic_no_classes">You don\'t have any classes</string>
    <string name="basic_no_students">This class doesn\'t have any students</string>
    <string name="basic_no_words">This collection doesn\'t have any words</string>
    <string name="basic_chart_no_data">Not enough data to load a chart, keep training</string>
    <string name="basic_chart_title">Your progresses:</string>
    <string name="basic_"></string>
    <string name="form_title_remove_STR">Remove %s</string>
    <string name="form_sure_to_delete_STR">Are you sure you want to delete %s?</string>
    <string name="form_sure_to_delete_coll_STR_and_words">Are you sure you want to delete %s and all its words?</string>
    <string name="form_im_sure">I\'m sure</string>
    <string name="form_continue">Continue</string>
    <string name="form_reset">Exit and Reset</string>
    <string name="form_test_completed">Test Completed</string>
    <string name="form_test_completed_results">You got %s out of %s</string>
    <string name="word_original">Original</string>
    <string name="word_translated">Translated</string>
    <string name="word_translation">Translation</string>
    <string name="word_original_w">Original word</string>
    <string name="word_translated_w">Translated word</string>
    <string name="word_insert_new">INSERT A NEW WORD</string>
    <string name="word_edit">Edit word</string>
    <string name="word_delete">Delete word</string>
    <string name="word_deleted">Word deleted</string>
    <string name="word_cant_create_new">Couldn\'t create new word</string>
    <string name="word_cant_delete">Couldn\'t delete this word</string>
    <string name="word_"></string>
    <string name="words_cant_load">Couldn\'t load words</string>
    <string name="coll_title">Title</string>
    <string name="coll_name">Collection name</string>
    <string name="coll_create_new">Create a new collection</string>
    <string name="coll_add">Add collection</string>
    <string name="coll_rename">Rename collection</string>
    <string name="coll_no_other_add">No other collection to add</string>
    <string name="coll_deleted">Collection deleted</string>
    <string name="coll_cant_rename">Couldn\'t rename collection</string>
    <string name="coll_cant_remove">Couldn\'t remove collection</string>
    <string name="coll_cant_delete">Couldn\'t delete collection</string>
    <string name="coll_err_creating_retry">"Error creating collection, please try again later"</string>
    <string name="coll_import_btn">Import collection</string>
    <string name="coll_import_title">This collection has been shared with you:</string>
    <string name="coll_import_title_owner_error">You already own:</string>
    <string name="coll_"></string>
    <string name="colls_mine">Mine</string>
    <string name="colls_collections">Collections</string>
    <string name="colls_shared">Collections shared</string>
    <string name="colls_add">Add collections</string>
    <string name="colls_cant_add">Couldn\'t add collections</string>
    <string name="colls_cant_load">Couldn\'t load collections</string>
    <string name="colls_cant_update">"Couldn'\t update collections"</string>
    <string name="colls_imported">Collection imported</string>
    <string name="colls_imported_failed">Couldn\'t import collection</string>
    <string name="colls_"></string>
    <string name="learn_completed_alert_title">Learning completed</string>
    <string name="learn_completed_alert_text">You learned all words in this collection</string>
    <string name="study_"></string>
    <string name="class_students">Students</string>
    <string name="class_name">Class name</string>
    <string name="class_share">Share class</string>
    <string name="class_join">Join Class</string>
    <string name="class_joined">Class joined</string>
    <string name="class_rename">Rename class</string>
    <string name="class_create_new">Create a new class</string>
    <string name="class_delete">Delete class</string>
    <string name="class_deleted">Class deleted</string>
    <string name="class_not_found">Class not found</string>
    <string name="class_cant_join">Couldn\'t join class</string>
    <string name="class_cant_load_usernames">Couldn\'t load Usernames</string>
    <string name="class_cant_rename">Couldn\'t rename class</string>
    <string name="class_cant_delete">Couldn\'t delete this class</string>
    <string name="class_chart_title">Your students progresses:</string>
    <string name="class_"></string>
    <string name="classes_joined">Joined</string>
    <string name="classes_created">Created</string>
    <string name="classes_invited_to">You have been invited to class:</string>
    <string name="classes_already_in">You are already in class:</string>
    <string name="classes_my_class_join_error">You can\'t join your own class:</string>
    <string name="classes_"></string>
    <string name="title_activity_delme">ScrollingActivity</string>
</resources>