<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.rememo.rememo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_collections"
        android:name="it.rememo.rememo.ui.collections.CollectionsFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections" />

    <fragment
        android:id="@+id/navigation_classes"
        android:name="it.rememo.rememo.ui.classes.ClassesFragment"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" />
</navigation>