<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.classes.ClassDetailsActivity">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chartStudents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCollections"
        app:layout_constraintEnd_toEndOf="@+id/btnCollections"
        app:layout_constraintStart_toStartOf="@+id/btnCollections"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/btnCollections"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableTint="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/colls_shared"
        app:layout_constraintBottom_toTopOf="@+id/btnStudents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableTint="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/title_students"
        app:layout_constraintBottom_toTopOf="@+id/btnShareClass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnShareClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:drawableRight="@drawable/ic_baseline_share_24"
        android:drawableTint="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/basic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/class_chart_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLoadingChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_loading"
        app:layout_constraintBottom_toTopOf="@+id/btnCollections"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>