<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartProgress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/chartCollections"
        app:layout_constraintLeft_toLeftOf="@id/btnLearn"
        app:layout_constraintRight_toRightOf="@id/btnTest"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chartCollections"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnTest"
        app:layout_constraintEnd_toEndOf="@+id/btnTest"
        app:layout_constraintStart_toStartOf="@+id/btnLearn"
        app:layout_constraintTop_toBottomOf="@+id/chartProgress" />

    <Button
        android:id="@+id/btnTrain"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:text="@string/title_train"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLearn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_learn_coll"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTrain"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_test_skills"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/basic_chart_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLoadingChartProgresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_loading"
        app:layout_constraintBottom_toBottomOf="@+id/chartProgress"
        app:layout_constraintEnd_toEndOf="@+id/chartProgress"
        app:layout_constraintStart_toStartOf="@+id/chartProgress"
        app:layout_constraintTop_toTopOf="@+id/chartProgress" />

    <TextView
        android:id="@+id/txtLoadingChartCollections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_loading"
        app:layout_constraintBottom_toBottomOf="@+id/chartCollections"
        app:layout_constraintEnd_toEndOf="@+id/chartCollections"
        app:layout_constraintStart_toStartOf="@+id/chartCollections"
        app:layout_constraintTop_toBottomOf="@+id/chartProgress" />
</androidx.constraintlayout.widget.ConstraintLayout>